--- a/VKClient/Base.lproj/Main.storyboard
+++ b/VKClient/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4vs-DP-CeX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -112,17 +112,101 @@
                     <connections>
                         <segue destination="Rlt-Q4-kXA" kind="relationship" relationship="viewControllers" id="lir-qL-Jqg"/>
                         <segue destination="aeO-Ps-MFd" kind="relationship" relationship="viewControllers" id="BRl-Ur-fkX"/>
+                        <segue destination="yM7-6n-4Nf" kind="relationship" relationship="viewControllers" id="2iI-61-n4c"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZeQ-gV-RLV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1035" y="139"/>
         </scene>
+        <!--News-->
+        <scene sceneID="Hqs-UU-dlW">
+            <objects>
+                <navigationController id="yM7-6n-4Nf" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="News" image="pencil.and.outline" catalog="system" id="0Np-Y1-AaA"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e58-Eg-zYR">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="48V-be-2Ho" kind="relationship" relationship="rootViewController" id="N21-0i-PLf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wOI-9C-kdq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1803" y="1125"/>
+        </scene>
+        <!--Лента новостей-->
+        <scene sceneID="w96-PF-va6">
+            <objects>
+                <viewController id="48V-be-2Ho" customClass="NewsPageViewController" customModule="VKClient" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="acQ-pY-3R6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3vO-2n-whX">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NewsListCell" rowHeight="600" id="bwu-4f-thH" customClass="NewsListCell" customModule="VKClient" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="600"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bwu-4f-thH" id="PpC-VH-jUg">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="600"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jNK-Qr-IjP">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="490.5"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xcm-dh-ngA">
+                                                    <rect key="frame" x="20" y="500.5" width="374" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="Xcm-dh-ngA" secondAttribute="bottom" constant="79" id="0b9-wo-FBy"/>
+                                                <constraint firstAttribute="trailing" secondItem="jNK-Qr-IjP" secondAttribute="trailing" id="c5U-xY-amA"/>
+                                                <constraint firstItem="Xcm-dh-ngA" firstAttribute="leading" secondItem="PpC-VH-jUg" secondAttribute="leading" constant="20" id="csQ-Q1-xoF"/>
+                                                <constraint firstAttribute="trailing" secondItem="Xcm-dh-ngA" secondAttribute="trailing" constant="20" id="dOx-aE-2W5"/>
+                                                <constraint firstItem="jNK-Qr-IjP" firstAttribute="top" secondItem="PpC-VH-jUg" secondAttribute="top" id="ueZ-p6-fpT"/>
+                                                <constraint firstItem="jNK-Qr-IjP" firstAttribute="leading" secondItem="PpC-VH-jUg" secondAttribute="leading" id="vvO-EP-5mN"/>
+                                                <constraint firstItem="Xcm-dh-ngA" firstAttribute="top" secondItem="jNK-Qr-IjP" secondAttribute="bottom" constant="10" id="zQm-JI-Wbb"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="newsDescriptionLabel" destination="Xcm-dh-ngA" id="H2m-rR-V6N"/>
+                                            <outlet property="newsImage" destination="jNK-Qr-IjP" id="UxV-cI-ykI"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <sections/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="xv0-aJ-IQN" firstAttribute="bottom" secondItem="3vO-2n-whX" secondAttribute="bottom" id="BQy-pu-bQC"/>
+                            <constraint firstItem="3vO-2n-whX" firstAttribute="top" secondItem="xv0-aJ-IQN" secondAttribute="top" id="P8q-QI-Wyf"/>
+                            <constraint firstItem="3vO-2n-whX" firstAttribute="leading" secondItem="xv0-aJ-IQN" secondAttribute="leading" id="fKw-BN-xcl"/>
+                            <constraint firstItem="xv0-aJ-IQN" firstAttribute="trailing" secondItem="3vO-2n-whX" secondAttribute="trailing" id="ruS-gn-9ht"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="xv0-aJ-IQN"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Лента новостей" id="vtF-Tz-AwK"/>
+                    <connections>
+                        <outlet property="newsTableView" destination="3vO-2n-whX" id="0y0-de-lxU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9a6-ra-9yD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2618.840579710145" y="1125"/>
+        </scene>
         <!--Friends-->
         <scene sceneID="OF2-bs-Oxb">
             <objects>
                 <navigationController id="Rlt-Q4-kXA" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Friends" image="person.2.fill" catalog="system" id="XK4-gF-JeZ"/>
+                    <tabBarItem key="tabBarItem" title="Friends" image="person.fill" catalog="system" id="XK4-gF-JeZ"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="O1V-DY-xd8">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -135,7 +219,7 @@
             </objects>
             <point key="canvasLocation" x="1803" y="-244"/>
         </scene>
-        <!--Friends List View Controller-->
+        <!--Друзья-->
         <scene sceneID="S7x-Po-t67">
             <objects>
                 <viewController id="qMh-Sx-3bm" customClass="FriendsListViewController" customModule="VKClient" customModuleProvider="target" sceneMemberID="viewController">
@@ -200,7 +284,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Meu-Xg-8Ba"/>
                     </view>
-                    <navigationItem key="navigationItem" id="KCc-PJ-ZaZ"/>
+                    <navigationItem key="navigationItem" title="Друзья" id="KCc-PJ-ZaZ"/>
                     <connections>
                         <outlet property="friendSearch" destination="pjP-Xs-jsC" id="M7e-HX-WP0"/>
                         <outlet property="tableView" destination="NK1-pj-Y10" id="nZH-we-6OF"/>
@@ -287,7 +371,7 @@
         <scene sceneID="Dk2-Qy-d25">
             <objects>
                 <navigationController id="aeO-Ps-MFd" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Groups" image="square.grid.2x2" catalog="system" id="B40-c3-7ev"/>
+                    <tabBarItem key="tabBarItem" title="Groups" image="person.3.fill" catalog="system" id="B40-c3-7ev"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DNk-iQ-UoQ">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -381,7 +465,7 @@
             </objects>
             <point key="canvasLocation" x="2618.840579710145" y="-244.41964285714283"/>
         </scene>
-        <!--Мои группы-->
+        <!--Группы-->
         <scene sceneID="PRY-PS-UAV">
             <objects>
                 <viewController id="WZo-27-wHI" customClass="GroupsListViewController" customModule="VKClient" customModuleProvider="target" sceneMemberID="viewController">
@@ -440,7 +524,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="LnM-Uv-ebc"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Мои группы" id="3f4-6z-tfw"/>
+                    <navigationItem key="navigationItem" title="Группы" id="3f4-6z-tfw"/>
                     <connections>
                         <outlet property="tableView" destination="ZV0-0B-tje" id="SJH-Z8-geL"/>
                     </connections>
@@ -518,7 +602,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="person.2.fill" catalog="system" width="128" height="80"/>
-        <image name="square.grid.2x2" catalog="system" width="128" height="114"/>
+        <image name="pencil.and.outline" catalog="system" width="128" height="119"/>
+        <image name="person.3.fill" catalog="system" width="128" height="61"/>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
     </resources>
 </document>
