--- a/VKClient/Base.lproj/Main.storyboard
+++ b/VKClient/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4vs-DP-CeX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -19,58 +19,44 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ubd-rc-OPt">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Login" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fZt-q7-VRN">
-                                        <rect key="frame" x="107" y="168" width="200" height="34"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="200" id="lRo-JK-9dr"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fhv-f0-KRD">
-                                        <rect key="frame" x="107" y="230" width="200" height="34"/>
+                                        <rect key="frame" x="82" y="280" width="250" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VK app" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hfB-3b-2lg">
-                                        <rect key="frame" x="153.5" y="76" width="107" height="41"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JEj-4l-OFh">
-                                        <rect key="frame" x="180" y="319" width="54" height="36"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <state key="normal" title="Log In"/>
+                                        <rect key="frame" x="180" y="339" width="54" height="36"/>
+                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="20"/>
+                                        <state key="normal" title="Log In">
+                                            <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                        </state>
                                         <connections>
                                             <action selector="LogInActionButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uib-nP-CLg"/>
-                                            <segue destination="4vs-DP-CeX" kind="presentation" identifier="LogInCorrectSegue" modalPresentationStyle="fullScreen" id="xGY-LL-kRN"/>
+                                            <segue destination="4vs-DP-CeX" kind="presentation" identifier="LogInCorrectSegue" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="xGY-LL-kRN"/>
                                         </connections>
                                     </button>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gqd-gf-bMc">
-                                        <rect key="frame" x="197" y="385" width="20" height="20"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="Jh1-JF-dgf"/>
-                                            <constraint firstAttribute="width" constant="20" id="g9r-32-f28"/>
-                                        </constraints>
-                                    </view>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginPageLogo" translatesAutoresizingMaskIntoConstraints="NO" id="YGb-r8-M3q">
+                                        <rect key="frame" x="142" y="50" width="130" height="130"/>
+                                    </imageView>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="fZt-q7-VRN">
+                                        <rect key="frame" x="82" y="210" width="250" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no"/>
+                                    </textField>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="Fhv-f0-KRD" firstAttribute="top" secondItem="fZt-q7-VRN" secondAttribute="bottom" constant="28" id="8Tn-kT-P4u"/>
-                                    <constraint firstItem="JEj-4l-OFh" firstAttribute="centerX" secondItem="Fhv-f0-KRD" secondAttribute="centerX" id="CGU-ef-nXH"/>
-                                    <constraint firstAttribute="width" secondItem="fZt-q7-VRN" secondAttribute="width" multiplier="2.07" id="D4V-Qo-Sjn"/>
-                                    <constraint firstItem="Fhv-f0-KRD" firstAttribute="centerX" secondItem="fZt-q7-VRN" secondAttribute="centerX" id="PQS-Wp-MVD"/>
-                                    <constraint firstItem="JEj-4l-OFh" firstAttribute="top" secondItem="Fhv-f0-KRD" secondAttribute="bottom" constant="55" id="Ppk-fC-qzk"/>
-                                    <constraint firstAttribute="trailing" secondItem="hfB-3b-2lg" secondAttribute="trailing" constant="113.5" id="Qsh-cR-pyt"/>
-                                    <constraint firstItem="hfB-3b-2lg" firstAttribute="top" secondItem="ubd-rc-OPt" secondAttribute="top" constant="76" id="U81-OU-u4D"/>
-                                    <constraint firstItem="Fhv-f0-KRD" firstAttribute="width" secondItem="fZt-q7-VRN" secondAttribute="width" id="WAn-Mh-Ihz"/>
-                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="top" secondItem="hfB-3b-2lg" secondAttribute="bottom" constant="51" id="ZsF-0Y-JRP"/>
-                                    <constraint firstItem="Gqd-gf-bMc" firstAttribute="top" secondItem="JEj-4l-OFh" secondAttribute="bottom" constant="30" id="e0B-g9-82V"/>
-                                    <constraint firstItem="Gqd-gf-bMc" firstAttribute="centerX" secondItem="JEj-4l-OFh" secondAttribute="centerX" id="gIT-zA-tZp"/>
-                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="centerX" secondItem="hfB-3b-2lg" secondAttribute="centerX" id="gmZ-PE-gl0"/>
-                                    <constraint firstItem="hfB-3b-2lg" firstAttribute="centerX" secondItem="ubd-rc-OPt" secondAttribute="centerX" id="nWZ-WQ-Q9q"/>
-                                    <constraint firstAttribute="bottom" secondItem="JEj-4l-OFh" secondAttribute="bottom" constant="425" id="nh2-Nd-O5J"/>
+                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="leading" secondItem="4PF-Pe-4vF" secondAttribute="leading" constant="82" id="4Xk-dq-7hn"/>
+                                    <constraint firstAttribute="bottom" secondItem="JEj-4l-OFh" secondAttribute="bottom" constant="420" id="Fex-6h-T0D"/>
+                                    <constraint firstItem="Fhv-f0-KRD" firstAttribute="centerX" secondItem="fZt-q7-VRN" secondAttribute="centerX" id="JOF-HK-sSs"/>
+                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="leading" secondItem="Fhv-f0-KRD" secondAttribute="leading" id="QTu-yV-ea4"/>
+                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="centerX" secondItem="YGb-r8-M3q" secondAttribute="centerX" id="ULN-3f-ih1"/>
+                                    <constraint firstItem="Fhv-f0-KRD" firstAttribute="firstBaseline" secondItem="fZt-q7-VRN" secondAttribute="baseline" constant="70" id="Wvv-L3-AM4"/>
+                                    <constraint firstItem="YGb-r8-M3q" firstAttribute="centerX" secondItem="ubd-rc-OPt" secondAttribute="centerX" id="h1F-Kl-UVT"/>
+                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="top" secondItem="YGb-r8-M3q" secondAttribute="bottom" constant="30" id="jvZ-uX-jxO"/>
+                                    <constraint firstAttribute="trailing" secondItem="fZt-q7-VRN" secondAttribute="trailing" constant="82" id="mb3-55-aX8"/>
+                                    <constraint firstItem="YGb-r8-M3q" firstAttribute="top" secondItem="4PF-Pe-4vF" secondAttribute="top" constant="50" id="pVm-17-ieq"/>
+                                    <constraint firstItem="JEj-4l-OFh" firstAttribute="top" secondItem="Fhv-f0-KRD" secondAttribute="bottom" constant="25" id="sRs-eW-v0O"/>
+                                    <constraint firstItem="JEj-4l-OFh" firstAttribute="centerX" secondItem="Fhv-f0-KRD" secondAttribute="centerX" id="tfY-lK-KZi"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="V66-Tu-eTy"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="4PF-Pe-4vF"/>
@@ -78,17 +64,15 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="ubd-rc-OPt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="M8h-Nh-mVr"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ubd-rc-OPt" secondAttribute="trailing" id="QN0-tU-lEp"/>
-                            <constraint firstItem="ubd-rc-OPt" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="RDj-96-uTS"/>
-                            <constraint firstItem="ubd-rc-OPt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="qfp-AZ-Zef"/>
+                            <constraint firstItem="ubd-rc-OPt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Isa-8m-UAj"/>
+                            <constraint firstAttribute="trailing" secondItem="ubd-rc-OPt" secondAttribute="trailing" id="dlN-DJ-taK"/>
+                            <constraint firstItem="ubd-rc-OPt" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="j9v-Em-6Tp"/>
+                            <constraint firstItem="ubd-rc-OPt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ptz-Yt-1tJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="mGJ-a4-Zgb"/>
                     <connections>
-                        <outlet property="appNameTitle" destination="hfB-3b-2lg" id="3hf-hv-pmy"/>
-                        <outlet property="loadingBar" destination="Gqd-gf-bMc" id="ljp-7h-Sdg"/>
                         <outlet property="loginActionButton" destination="JEj-4l-OFh" id="ViW-zH-JKQ"/>
                         <outlet property="loginField" destination="fZt-q7-VRN" id="4Wj-Fj-RKH"/>
                         <outlet property="loginPageScrollView" destination="ubd-rc-OPt" id="htG-zC-pLQ"/>
@@ -239,7 +223,7 @@
             <objects>
                 <navigationController id="Rlt-Q4-kXA" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Friends" image="person.fill" catalog="system" id="XK4-gF-JeZ"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="O1V-DY-xd8">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="O1V-DY-xd8">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -256,11 +240,11 @@
             <objects>
                 <viewController id="qMh-Sx-3bm" customClass="FriendsListViewController" customModule="VKClient" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="itP-KY-ATK">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NK1-pj-Y10">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <searchBar key="tableHeaderView" contentMode="redraw" id="pjP-Xs-jsC">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
@@ -331,11 +315,11 @@
             <objects>
                 <viewController id="DSg-3i-k0O" customClass="FriendPageViewController" customModule="VKClient" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qsC-RI-70G">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qYC-IH-tQS">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PTe-5v-7te">
                                     <size key="itemSize" width="128" height="222"/>
@@ -489,7 +473,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="XUN-Vs-GY6"/>
                     <connections>
-                        <outlet property="friendsSearch" destination="xDs-lM-gFg" id="mA1-XD-6PH"/>
+                        <outlet property="friendSearch" destination="xDs-lM-gFg" id="UEk-3e-XN4"/>
                         <outlet property="tableView" destination="7aA-Wx-fWX" id="abi-Fs-8Pe"/>
                     </connections>
                 </viewController>
@@ -635,6 +619,7 @@
     </scenes>
     <resources>
         <image name="heart" catalog="system" width="128" height="109"/>
+        <image name="loginPageLogo" width="130" height="130"/>
         <image name="pencil.and.outline" catalog="system" width="128" height="119"/>
         <image name="person.3.fill" catalog="system" width="128" height="61"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
